checkRevoke, Certificate, revoke cert

--- a/src/app/main/sample/findUsers/findUsers.component.html
+++ b/src/app/main/sample/findUsers/findUsers.component.html
@@ -14,7 +14,7 @@
                         <div class="card-body pb-1">
                             <ul class="heroes">
                                 <tr
-                                        (click)="findUsers()"> Find
+                                        (click)="findUsers()"> Find User
                                 </tr>
                                 <tr *ngFor="let user of users"
                                     [class.selected]="user === selectedUser"
