--- a/src/app/main/sample/listCerts/listCerts.component.html
+++ b/src/app/main/sample/listCerts/listCerts.component.html
@@ -1,3 +1,51 @@
-<p>
-    abc works!
-</p>
+<div class="content-wrapper container-xxl p-0">
+    <div class="content-body">
+        <!-- content-header component -->
+        <app-content-header [contentHeader]="contentHeader"></app-content-header>
+
+        <!-- Basic Alerts start -->
+        <section id="home-page">
+            <div class="row">
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4 class="card-title">Find Certificate</h4>
+                        </div>
+                        <div class="card-body pb-1">
+                            <ul class="heroes">
+                                <tr
+                                        (click)="findUsers()"> Find Certificate
+                                </tr>
+                                <tr *ngFor="let cert of certificates; index as i"
+                                    [class.selected]="cert === selectedCert"
+                                    (click)="onSelect(cert)">
+                                    {{"Certificate   " + i}}
+                                </tr>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Basic Alerts end -->
+
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-body pb-1">
+                    <div *ngIf="selectedCert">
+
+                        <div><span>type: </span>{{selectedCert.type}}</div><br>
+                        <div><span>certificate: </span>{{selectedCert.certificate}}</div><br>
+                        <div><span>keyStore: </span>{{selectedCert.keyStore}}</div><br>
+                        <div><span>certificateData: </span>{{selectedCert.certificateData}}</div><br>
+                        <div><span>rawCertificateData: </span>{{selectedCert.rawCertificateData}}</div>
+
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
